Intermediate checkin of some build improvements.